# MirrorBI-backend/docs/swagger.yaml
@@ -27,16 +27,13 @@ definitions:
         example: ""
         type: string
     type: object
-  chart.ChartGenByAiRequest:
+  chart.ChartGenByAiResponse:
     properties:
-      chartType:
-        description: 图表类型
+      genChart:
+        description: 生成的图表数据代码用于展示
         type: string
-      goal:
-        description: 分析目标
-        type: string
-      name:
-        description: 图表名称
+      genResult:
+        description: 生成的图表结果
         type: string
     type: object
   chart.ChartQueryRequest:
@@ -434,12 +431,24 @@ paths:
         name: file
         required: true
         type: file
-      - description: 图表生成信息
-        in: body
-        name: request
+      - description: 图表名称
+        example: 人数趋势
+        in: formData
+        name: name
         required: true
-        schema:
-          $ref: '#/definitions/chart.ChartGenByAiRequest'
+        type: string
+      - description: 分析目标
+        example: 了解用户增长
+        in: formData
+        name: goal
+        required: true
+        type: string
+      - description: 图表类型
+        example: 折线图
+        in: formData
+        name: chartType
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -450,7 +459,7 @@ paths:
             - $ref: '#/definitions/common.Response'
             - properties:
                 data:
-                  type: boolean
+                  $ref: '#/definitions/chart.ChartGenByAiResponse'
               type: object
         "400":
           description: 生成失败，详情见响应中的code
