# MirrorBI-backend/internal/controller/chart_controller.go
@@ -1,16 +1,13 @@
 package controller
 
 import (
-	"mrbi/internal/api/siliconflow"
+	"github.com/gin-gonic/gin"
 	"mrbi/internal/common"
 	"mrbi/internal/ecode"
 	reqChart "mrbi/internal/model/dto/req/chart"
 	resChart "mrbi/internal/model/dto/res/chart"
 	"mrbi/internal/service"
-	"mrbi/internal/utils"
 	"strconv"
-
-	"github.com/gin-gonic/gin"
 )
 
 func dumb() {
@@ -201,24 +198,24 @@ func EditChart(c *gin.Context) {
 // @Accept multipart/form-data
 // @Produce      json
 // @Param        file formData file true "excel文件"
-// @Param		request body reqChart.ChartGenByAiRequest true "图表生成信息"
-// @Success      200  {object}  common.Response{data=bool} "生成成功"
+// @Param   name      formData  string true  "图表名称"            example(人数趋势)
+// @Param   goal      formData  string true  "分析目标"            example(了解用户增长)
+// @Param   chartType formData  string true  "图表类型"  example(折线图)
+// @Success      200  {object}  common.Response{data=resChart.ChartGenByAiResponse} "生成成功"
 // @Failure      400  {object}  common.Response "生成失败，详情见响应中的code"
 // @Router       /api/chart/gen/ai [POST]
 func ChartGenByAi(c *gin.Context) {
+	//绑定请求参数
 	file, _ := c.FormFile("file")
-	//文件存放至本地
-	dst, originErr := utils.SaveFileToLocal(file)
-	if originErr != nil {
-		common.BaseResponse(c, nil, "文件保存失败", ecode.SYSTEM_ERROR)
-		return
-	} else {
-		defer utils.DeleteFile(dst)
-	}
-	data, originErr := utils.ExcelToCSV(dst)
-	if originErr != nil {
-		common.BaseResponse(c, nil, originErr.Error(), ecode.SYSTEM_ERROR)
+	Name := c.PostForm("name")
+	Goal := c.PostForm("goal")
+	ChartType := c.PostForm("chartType")
+	//调用生成服务
+	loginUser, _ := sUser.GetLoginUser(c)
+	res, err := sChart.ChartGenByAi(file, Name, Goal, ChartType, loginUser)
+	if err != nil {
+		common.BaseResponse(c, nil, err.Msg, err.Code)
 		return
 	}
-	siliconflow.NewLLMChatReqeustNoContext("分析一下这个数据有什么趋势", data)
+	common.Success(c, *res)
 }
